syntax = "proto3";
package processing.v1alpha1;
import "google/protobuf/timestamp.proto";

message User {
    string username = 1;
    string email = 2;
    google.protobuf.Timestamp password_changed_at = 3;
    google.protobuf.Timestamp created_at = 4;
}